RESOLVED FIXED74156
WebKit does not support box-shadow on display:table-row element
https://bugs.webkit.org/show_bug.cgi?id=74156
Summary WebKit does not support box-shadow on display:table-row element
Yao Wei
Reported 2011-12-08 19:33:33 PST
Test case: <div style="background:#999; box-shadow: 0 0 50px #000; display: table-row;"> <div style="display: table-cell; width: 300px; height: 300px;"> </div> </div> Related: https://bugs.webkit.org/show_bug.cgi?id=73536
Attachments
testcase (5.62 KB, text/html)
2026-02-04 18:54 PST, Karl Dubost
no flags
David Barr
Comment 1 2012-03-14 20:47:57 PDT
Confirmed: Google Chrome: 19.0.1069.0 (Official Build 126572) canary OS: Mac OS X WebKit: 536.3 (@110622) WebKit Nightly: Version 5.1.2 (6534.52.7, r110761)
gur.trio
Comment 2 2013-10-15 19:57:02 PDT
(In reply to comment #1) > Confirmed: > Google Chrome: 19.0.1069.0 (Official Build 126572) canary > OS: Mac OS X > WebKit: 536.3 (@110622) > > WebKit Nightly: Version 5.1.2 (6534.52.7, r110761) Hi All. If we change the test case content to <div style="background:#999; display: table-row;"> <div style="display: table-cell; box-shadow: 0 0 50px #000; width: 300px; height: 300px;"> </div> </div> it works well because when we paint table cell we paint the shadow in void RenderTableCell::paintBoxDecorations(PaintInfo& paintInfo, const LayoutPoint& paintOffset) but for table row there is no specific call for painting the shadow. Also shadow is a rareNonInheritedData so incase tr has shadow td will not inherit. So can we add some API to draw shadow for tr also? Please suggest.
Brent Fulgham
Comment 3 2022-07-12 15:36:45 PDT
Works in Chrome and Firefox. Does not work in Safari.
Radar WebKit Bug Importer
Comment 4 2022-07-12 15:37:04 PDT
Alexsander Borges Damaceno
Comment 5 2026-02-04 13:39:21 PST
Karl Dubost
Comment 6 2026-02-04 18:54:46 PST
Created attachment 478256 [details] testcase This testcase is covering multiple scenario, the one which is the most interesting is rowspan I don't think any browser is handling this well. :) It should be an issue for the CSS WG.
Karl Dubost
Comment 7 2026-02-04 18:55:32 PST
Specifically Test 7: Row with Rowspan
Karl Dubost
Comment 8 2026-02-04 19:08:27 PST
I opened https://github.com/w3c/csswg-drafts/issues/13455 This is not blocking this PR. Just probably something for another bug.
EWS
Comment 9 2026-04-05 09:42:01 PDT
Committed 310609@main (ecbdfc19cf68): <https://commits.webkit.org/310609@main> Reviewed commits have been landed. Closing PR #57826 and removing active labels.
Tim Nguyen (:ntim)
Comment 10 2026-04-10 09:49:59 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59099
Note You need to log in before you can comment on or make changes to this bug.