`box-shadow` does not work when used on `display: table-row` elements https://bugs.webkit.org/show_bug.cgi?id=74156

Reviewed by Simon Fraser.

`Box-shadow` was not painted correctly when applied to table-row elements
because table rows do not have a code path for paint `box-shadow` property.

This patch adds the code path for painting shadows on table rows.

Test: imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/box-shadow-table-row-display.html
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/box-shadow-table-row-display-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/box-shadow-table-row-display.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/box-shadow-table-row-display-ref.html: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/box-shadow-table-row-display-expected.html.
* Source/WebCore/rendering/RenderTableRow.h:
* Source/WebCore/rendering/RenderTableRow.cpp:
(WebCore::RenderTableCell::paintShadowForRowIfNeeded):
* Source/WebCore/rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::paintObject):

Canonical link: https://commits.webkit.org/310609@main